k8s/udagram-user-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udagram-user-api
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: udagram-user-api
    spec:
      containers:
        - name: udagram-user-api
          image: xistz/udagram-user-api:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: udagram-user-api
spec:
  selector:
    app: udagram-user-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
